--- a/index.html
+++ b/index.html
@@ -74,7 +74,119 @@
         <div class="row row-cols-1 row-cols-lg-2">
           <div class="col col-lg-8">
             <div class="row row-cols-1">
-              <div class="col debug"></div>
+              <div class="col debug">
+                <div class="card">
+                  <div class="card-header">
+                    <h3>Prossime classi</h3>
+                  </div>
+                  <div class="card-body">
+                    <blockquote class="blockquote mb-0">
+                      <table class="table table-hover">
+                        <thead class="text-center">
+                          <tr>
+                            <th scope="col" class="text-start">Nome</th>
+                            <th scope="col">Data inizio</th>
+                            <th scope="col">ROI</th>
+                            <th scope="col">Stato</th>
+                            <th scope="col">Azioni</th>
+                          </tr>
+                        </thead>
+                        <tbody class="text-center">
+                          <tr>
+                            <th scope="row"  class="text-start">
+                              <img src="./asset/img/class-avatar.jpg" alt="#"><span>Classe 75</span></th>
+                            <td><span>15 Feb 2021</span></td>
+                            <td>20&percnt;</td>
+                            <td><span class="badge text-bg-success">Done</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"  class="text-start">
+                              <img src="./asset/img/class-avatar.jpg" alt="#"><span>Classe 76</span></th>
+                            <td><span>16 Feb 2021</span></td>
+                            <td>20&percnt;</td>
+                            <td><span class="badge text-bg-success">Done</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"  class="text-start">
+                              <img src="./asset/img/class-avatar.jpg" alt="#"><span>Classe 77</span></th>
+                            <td><span>17 Feb 2021</span></td>
+                            <td>20&percnt;</td>
+                            <td><span class="badge text-bg-warning">Process</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"  class="text-start">
+                              <img src="./asset/img/class-avatar.jpg" alt="#"><span>Classe 78</span></th>
+                            <td><span>18 Feb 2021</span></td>
+                            <td>20&percnt;</td>
+                            <td><span class="badge text-bg-success">Done</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"  class="text-start">
+                              <img src="./asset/img/class-avatar.jpg" alt="#"><span>Classe 79</span></th>
+                            <td><span>19 Feb 2021</span></td>
+                            <td>20&percnt;</td>
+                            <td><span class="badge text-bg-danger">Failed</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"  class="text-start">
+                              <img src="./asset/img/class-avatar.jpg" alt="#"><span>Classe 80</span></th>
+                            <td><span>20 Feb 2021</span></td>
+                            <td>20&percnt;</td>
+                            <td><span class="badge text-bg-success">Done</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"  class="text-start">
+                              <img src="./asset/img/class-avatar.jpg" alt="#"><span>Classe 81</span></th>
+                            <td><span>21 Feb 2021</span></td>
+                            <td>20&percnt;</td>
+                            <td><span class="badge text-bg-danger">Failed</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"  class="text-start">
+                              <img src="./asset/img/class-avatar.jpg" alt="#"><span>Classe 82</span></th>
+                            <td><span>22 Feb 2021</span></td>
+                            <td>20&percnt;</td>
+                            <td><span class="badge text-bg-success">Done</span></td>
+                            <td>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                              <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                          </tr>
+                          
+                        </tbody>
+                      </table>
+                    </blockquote>
+                  </div>
+                </div>
+              </div>
               <div class="col debug"></div>
             </div>
           </div>
