--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                       <table class="table table-hover">
                         <thead class="text-center">
                           <tr>
-                            <th scope="col" class="text-start">Nome</th>
-                            <th scope="col">Data inizio</th>
-                            <th scope="col">ROI</th>
-                            <th scope="col">Stato</th>
-                            <th scope="col">Azioni</th>
+                            <th class="col text-start">Nome</th>
+                            <th class="col">Data inizio</th>
+                            <th class="col">ROI</th>
+                            <th class="col">Stato</th>
+                            <th class="col">Azioni</th>
                           </tr>
                         </thead>
                         <tbody class="text-center">
