[ADD] Panel Todo - Panel Stats

--- a/index.html
+++ b/index.html
@@ -79,13 +79,12 @@
 
         <!-- Panel Table -->
 
-              <div class="col debug">
+              <div class="col py-3">
                 <div class="card">
                   <div class="card-header">
                     <h3>Prossime classi</h3>
                   </div>
                   <div class="card-body">
-                    <blockquote class="blockquote mb-0">
                       <table class="table table-hover">
                         <thead class="text-center">
                           <tr>
@@ -188,12 +187,11 @@
                           
                         </tbody>
                       </table>
-                    </blockquote>
                   </div>
                 </div>
               </div>
         <!-- Panel Accordion -->
-              <div class="col debug">
+              <div class="col py-3">
                 <div class="card">
                   <div class="card-header">
                     F.A.Q.
@@ -246,8 +244,48 @@
           </div>
           <div class="col col-lg-4">
             <div class="row row-cols-1">
-              <div class="col debug"></div>
-              <div class="col debug"></div>
+              <div class="col py-3">
+                <div class="card">
+                  <h5 class="card-header">Todo</h5>
+                  <div class="card-body">
+                    <ul class="list-group">
+                      <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                        <label class="form-check-label" for="firstCheckbox">kickoff nuove classi</label>
+                      </li>
+                      <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                        <label class="form-check-label" for="secondCheckbox">Lezione su Bootstrap 5 in classe #75</label>
+                      </li>
+                      <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                        <label class="form-check-label" for="thirdCheckbox">Controllare username github studenti</label>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col py-3">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="card">
+                      <img src="./asset/img/stats.jpeg" class="card-img-top" alt="stats">
+                      <div class="card-body">
+                        <h5 class="card-title">Utenti attivi</h5>
+                        <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Gennaio: 1200</li>
+                        <li class="list-group-item">Febbraio: 800</li>
+                        <li class="list-group-item">Marzo: 1500</li>
+                      </ul>
+                      <div class="card-body">
+                        <a href="#" class="card-link text-decoration-underline" style="color:blue;">Visualizza report approfondito</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
