--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
           </div>
           <div class="col col-lg-4">
             <div class="row row-cols-1">
+
+        <!-- Panel TODO -->
               <div class="col py-3">
                 <div class="card">
                   <h5 class="card-header">Todo</h5>
@@ -265,6 +267,8 @@
                   </div>
                 </div>
               </div>
+
+        <!-- Panel Stats -->
               <div class="col py-3">
                 <div class="card">
                   <div class="card-body">
