--- a/index.html
+++ b/index.html
@@ -23,7 +23,37 @@
 </head>
 <body>
   <header>
-    <div class="top_bar fixed-top debug"></div>
+    <div class="top_bar d-flex">
+      <div class="logo text-center">
+        <img src="./asset/img/logo.svg" alt="logo">
+      </div>
+      <div class="search_bar d-flex justify-content-between align-items-center">
+        <div class="search w-100">
+          <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+              <form class="d-flex w-100" role="search">
+                <input class="form-control me-2" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
+              </form>
+            </div>
+          </nav>
+        </div>
+        <div class="action d-flex justify-content-between align-items-center">
+          <span><i class="fa-solid fa-list"></i></span>
+          <span><i class="fa-solid fa-circle-question"></i></span>
+          <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
+          <div class="dropdown">
+            <button class="btn px-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-bell" style="color: #ff8f00;"></i>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>        
+        </div>
+      </div>
+    </div>
   </header>
 
   <main class="d-flex">
@@ -147,7 +177,7 @@
                     </div>
                     <div class="col-12">
                       <button type="submit" class="btn btn-primary">Salva</button>
-                      <button type="reset" class="btn btn-primary">Svuota</button>
+                      <button type="reset" class="btn btn-warning">Svuota</button>
                     </div>
                   </form>
                 </div>
