--- a/index.html
+++ b/index.html
@@ -23,20 +23,16 @@
 </head>
 <body>
   <header>
-    <div class="top_bar d-flex">
+    <div class="top_bar my-2 d-flex">
       <div class="logo text-center">
         <img src="./asset/img/logo.svg" alt="logo">
       </div>
       <div class="search_bar d-flex justify-content-between align-items-center">
-        <div class="search w-100">
-          <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-              <form class="d-flex w-100" role="search">
-                <input class="form-control me-2" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
-              </form>
-            </div>
-          </nav>
+        <div class="input-group me-3">
+          <button type="button" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+          <input type="text" class="form-control" aria-label="Text input with segmented dropdown button" placeholder="Prova a cercare la lezione: Laravel">
         </div>
+                
         <div class="action d-flex justify-content-between align-items-center">
           <span><i class="fa-solid fa-list"></i></span>
           <span><i class="fa-solid fa-circle-question"></i></span>
