--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <header>
     <div class="top_bar d-flex">
       <div class="logo text-center">
-        <img src="./asset/img/logo.svg" alt="logo">
+        <img class="d-none d-md-inline-block" src="./asset/img/logo.svg" alt="logo">
+        <img class="d-md-none" src="./asset/img/mobile-logo.png" alt="">
       </div>
       <div class="search_bar d-flex justify-content-between align-items-center">
         <div class="input-group me-3">
@@ -34,9 +35,9 @@
         </div>
                 
         <div class="action d-flex justify-content-between align-items-center">
-          <span><i class="fa-solid fa-list"></i></span>
-          <span><i class="fa-solid fa-circle-question"></i></span>
-          <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
+          <span class="d-none d-md-inline-block"><i class="fa-solid fa-list"></i></span>
+          <span class="d-none d-md-inline-block"><i class="fa-solid fa-circle-question"></i></span>
+          <span class="d-none d-md-inline-block"><i class="fa-solid fa-ellipsis-vertical"></i></span>
           <div class="dropdown">
             <button class="border-0 px-0" type="button" data-bs-toggle="dropdown">
               <i class="fa-solid fa-bell" style="color: #ff8f00;"></i>
